code-samples/example-11-sts/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ex11-service
  labels:
    app: ex11-app
spec:
  clusterIP: None
  selector:
    app: ex11-app
  ports:
  - name: "rest"
    port: 80
    targetPort: "http-default"
